# genrepass-cli

./: CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  build-releases.sh  genrepass-template.json  genrepass.json
.github/workflows/: release.yml
src/: main.rs
