[package]
name = "genrepass-cli"
version = "1.1.0"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
description = """Generate readable passwords from an ordered list of words extracted from text.
For improved security, numbers and special characters are inserted at random places."""
homepage = "https://github.com/AlexChaplinBraz/genrepass"
repository = "https://github.com/AlexChaplinBraz/genrepass"
documentation = "https://github.com/AlexChaplinBraz/genrepass"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["generate", "readable", "secure", "password", "text", ]
categories = ["command-line-utilities"]
exclude = ["/releases"]

[[bin]]
name = "genrepass"
path = "src/main.rs"

[dependencies]
genrepass = "1.1.3"
copypasta-ext = "0.3"
clap = { version = "2.33", features = ["color"] }
